--- a/src/index.css
+++ b/src/index.css
@@ -25,17 +25,24 @@
   font-style: normal;
 }
 
-/* Reset browser spacing */
+/* Reset browser spacing - Mobile First */
 html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
+  position: relative;
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+/* Prevent any element from causing horizontal scroll */
+body * {
+  max-width: 100%;
 }
 
 /* Sun rotation animation */
