--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-image: url('/Background-redesign.png');
+  background-image: url('/Background-redesign.avif');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -191,7 +191,7 @@ html, body, #root {
 .w-full.min-h-screen,
 .w-screen.min-h-screen,
 .w-screen.h-screen {
-  background-image: url('/Background-redesign.png');
+  background-image: url('/Background-redesign.avif');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
